--- a/src/main/resources/templates/member/account-main.html
+++ b/src/main/resources/templates/member/account-main.html
@@ -68,7 +68,7 @@
                     </h1>
                     <ul class="topbox0">
                         <li class="topbox-content1">
-                            <a href="/mypage/mypage-applied">
+                            <a href="/mypage/account-applied">
                                 <dl>
                                     <dt>지원완료</dt>
                                     <dd>0</dd>
@@ -77,7 +77,7 @@
                         </li>
 
                         <li class="topbox-content1">
-                            <a href="/mypage/mypage-applied">
+                            <a href="/mypage/account-applied">
                                 <dl>
                                     <dt>최종합격</dt>
                                     <dd>0</dd>
@@ -85,7 +85,7 @@
                             </a>
                         </li>
                         <li class="topbox-content1">
-                            <a href="/mypage/mypage-applied">
+                            <a href="/mypage/account-applied">
                                 <dl>
                                     <dt>불합격</dt>
                                     <dd>0</dd>
