--- a/src/main/resources/templates/enterprise/company-image.html
+++ b/src/main/resources/templates/enterprise/company-image.html
@@ -34,7 +34,7 @@
     <body>
         <div id="root">
             <div id="skipnavigation"><a href="/#content">본문 바로가기</a></div>
-            <form action="/enterprise/company-post-images" method="post" enctype="multipart/form-data">
+            <form action="/enterprise/company-post-images" method="post" enctype="multipart/form-data" name="program-image-form">
                 <div class="container">
                     <div class="title">
                         우리 회사를 보여줄 수 있는 사진을 등록해주세요
@@ -73,7 +73,7 @@
                                 type="file"
                                 id="logoattach"
                                 style="display: none"
-                                name="file"
+                                name="logo"
                             />
                             <span
                                 >사이즈: 148x148 px 이상<br />파일용량: 10MB
@@ -101,7 +101,7 @@
                                     ></path>
                                 </svg>
                             </button>
-                            <input type="file" name="file" id="imageattach" style="display: none;">
+                            <input type="file" name="main-image" id="imageattach" style="display: none;">
                             <span
                                 >사이즈: 1080x720 px 이상<br />파일용량: 10MB
                                 이하</span
@@ -125,12 +125,14 @@
                     <div class="buttons">
                         <!-- <button class="btn btn-primary">기업정보 등록</button>/ -->
                         <button class="btn btn-secondary">승인요청</button>
-                        <button class="btn btn-secondary">이미지 삭제</button>
+                        <button class="btn btn-secondary" id="delete-btn">이미지 삭제</button>
+                        <button class="btn btn-secondary" id="Logo-btn">로고 삭제</button>
                     </div>
                 </div>
             </form>
         </div>
         <div id="modal"></div>
     </body>
+    <script src="/js/enterprise/company-image-event.js"></script>
     <script src="/js/enterprise/company-image.js"></script>
 </html>
