--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
     />
 </head>
 <body>
-<header th:replace="/main/header.html :: .header-sc"></header>
+<header th:replace="~{/main/header.html :: .header-sc}"></header>
 <!-- 메인 시작 -->
 <main>
     <div class="mainWrapper">
